[package]
name = "mvt-reader"
version = "1.3.0"
description = "A library for decoding and reading mapbox vector tiles in Rust and WebAssembly"
authors = ["Paul Lange <paul.lange@data-experts.de>"]
repository = "https://github.com/codeart1st/mvt-reader"
keywords = ["rust", "webassembly", "wasm", "pbf", "mvt"]
include = ["/src", "/LICENSE", "/build.rs", "vector_tile.proto"]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "js-sys", "geojson", "serde"]

[dependencies]
geo-types = "0.7.13"
prost = { version = "0.12.6", default-features = false, features = ["prost-derive"] }
wasm-bindgen = { version = "0.2.92", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3.69", optional = true }
geojson = { version = "0.24.1", optional = true }
serde = { version = "1.0.203", optional = true }

[dev-dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
prost = { version = "0.12.6" } # for testing we need default-features to be enabled

[build-dependencies]
prost-build = "0.12.6"
